[project]
name = "shakyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryota Kojima",email = "ryotakojima@RyotanoMacBook-Pro.local"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "shakyo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
